feat: add code style enforcement with Spotless and Prettier
- Backend: Add Spotless Maven plugin with Google Java Format (4-space indentation)
- Frontend: Add Prettier + ESLint integration (standard Prettier style)
- Add pre-commit hooks via Husky to enforce style checks
- Apply formatting to all existing code (21 Java files, 4 frontend files)
- Update documentation in all READMEs and copilot-instructions.md
- All tests pass after formatting changes